--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     </div>
 
-    <footer>yo</footer>
+    <footer>1 cycle of Earth around the sun is equal to 1 year for <b>all</b> planets.</footer>
 
 </body>
 
