--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Solar System</title>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/png" href="res/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <script defer src="main.js"></script>
